--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
     height: 100vh;
@@ -9,8 +13,4 @@ body {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-}
-
-canvas {
-    /*box-shadow: 3px 3px 0 #ccc;*/
 }
