--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ body {
     height: 100vh;
 }
 
-body {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+#root {
+    height: 100%;
 }
